<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTxtPwOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editTxtPw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTxtPw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnFirstPwSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnFirstPwCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_button_red"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite" />
</LinearLayout>